--- a/helm/alloy/values.yaml
+++ b/helm/alloy/values.yaml
@@ -9,7 +9,7 @@ extraObjects:
     kind: Role
     metadata:
       name: alloy
-      namespace: team-breaking-build
+      namespace: recipefy
     rules:
       - apiGroups: [""]
         resources: ["pods", "services", "endpoints", "namespaces"]
@@ -21,7 +21,7 @@ extraObjects:
     kind: RoleBinding
     metadata:
       name: alloy
-      namespace: team-breaking-build
+      namespace: recipefy
     roleRef:
       apiGroup: rbac.authorization.k8s.io
       kind: Role
@@ -29,7 +29,7 @@ extraObjects:
     subjects:
       - kind: ServiceAccount
         name: alloy
-        namespace: team-breaking-build
+        namespace: recipefy
 
 alloy:
   mounts:
@@ -46,7 +46,7 @@ alloy:
       discovery.kubernetes "pods_ns" {
         role       = "pod"
         namespaces {
-          names = ["team-breaking-build"]
+          names = ["recipefy"]
         }
       }
       
@@ -57,6 +57,6 @@ alloy:
       
       loki.write "local" {
         endpoint {
-          url = "http://loki.team-breaking-build.svc.cluster.local:3100/loki/api/v1/push"
+          url = "http://loki.recipefy-monitoring.svc.cluster.local:3100/loki/api/v1/push"
         }
       }
