--- a/.github/workflows/api-gateway-ci-cd.yml
+++ b/.github/workflows/api-gateway-ci-cd.yml
@@ -114,6 +114,6 @@ jobs:
       - name: Deploy Helm Chart
         run: |
           helm upgrade --install ${{ env.RELEASE_NAME }} ${{ env.CHART_PATH }} \
-            --set image.tag=sha-${{ env.IMAGE_TAG }} \
+            --set image.tag=${{ env.IMAGE_TAG }} \
             --namespace ${{ env.NAMESPACE }} \
             --wait --timeout 5m
