--- a/.github/workflows/version-ci-cd.yml
+++ b/.github/workflows/version-ci-cd.yml
@@ -115,9 +115,17 @@ jobs:
       - name: Set image tag
         run: echo "IMAGE_TAG=$(echo $GITHUB_SHA | cut -c1-7)" >> $GITHUB_ENV
 
+      - name: Set image tag
+        run: |
+          if [ -z "$GITHUB_SHA" ]; then
+            echo "IMAGE_TAG=latest" >> $GITHUB_ENV
+          else
+            echo "IMAGE_TAG=sha-$(echo $GITHUB_SHA | cut -c1-7)" >> $GITHUB_ENV
+          fi
+
       - name: Deploy Helm Chart
         run: |
           helm upgrade --install ${{ env.HELM_RELEASE_NAME }} ${{ env.CHART_PATH }} \
             --namespace ${{ env.HELM_NAMESPACE }} \
-            --set image.tag=sha-${{ env.IMAGE_TAG }} \
+            --set image.tag=${{ env.IMAGE_TAG }} \
             --wait --timeout 5m
