--- a/helm/alloy/values.yaml
+++ b/helm/alloy/values.yaml
@@ -4,6 +4,9 @@ serviceMonitor:
 rbac:
   create: false
 
+crds:
+  create: false
+
 extraObjects:
   - apiVersion: rbac.authorization.k8s.io/v1
     kind: Role
