--- a/.github/workflows/prometheus-ci-cd.yml
+++ b/.github/workflows/prometheus-ci-cd.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
+      KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
       NAMESPACE: recipefy-monitoring
       RELEASE_NAME: prometheus
       CHART_PATH: ./helm/prometheus
