--- a/.github/workflows/prometheus-ci-cd.yml
+++ b/.github/workflows/prometheus-ci-cd.yml
@@ -30,6 +30,6 @@ jobs:
 
       - name: Deploy Prometheus with Helm
         run: |
-          helm upgrade --install ${{ env.HELM_RELEASE_NAME }} ${{ env.CHART_PATH }} \
-            --namespace ${{ env.HELM_NAMESPACE }} \
+          helm upgrade --install ${{ env.RELEASE_NAME }} ${{ env.CHART_PATH }} \
+            --namespace ${{ env.NAMESPACE }} \
             --wait --timeout 5m
