--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -192,8 +192,75 @@ services:
         depends_on:
             - weaviate
 
+    prometheus:
+        image: prom/prometheus:v2.52.0
+        container_name: prometheus
+        volumes:
+            - ./monitoring/prometheus:/etc/prometheus
+            - prometheus-data:/prometheus
+        command:
+            - "--config.file=/etc/prometheus/prometheus.yml"
+            - "--storage.tsdb.path=/prometheus"
+            - "--web.console.libraries=/etc/prometheus/console_libraries"
+            - "--web.console.templates=/etc/prometheus/consoles"
+            - "--web.enable-lifecycle"
+        restart: unless-stopped
+
+    grafana:
+        image: grafana/grafana-oss:latest
+        container_name: grafana
+        ports:
+            - "3001:3000"
+        volumes:
+            - grafana-data:/var/lib/grafana
+            - ./monitoring/grafana/provisioning:/etc/grafana/provisioning:ro
+        environment:
+            - GF_SECURITY_ADMIN_USER=admin
+            - GF_SECURITY_ADMIN_PASSWORD=admin
+            - GF_USERS_ALLOW_SIGN_UP=false
+            - GF_FEATURE_TOGGLES_ENABLE=logsInExplore
+            - GF_LOG_CONSOLECOLORS=true
+        depends_on:
+            - prometheus
+            - loki
+        restart: unless-stopped
+
+    promtail:
+        image: grafana/promtail:latest
+        volumes:
+            - /var/lib/docker/containers:/var/lib/docker/containers:ro
+            - /var/run/docker.sock:/var/run/docker.sock
+            - ./monitoring/promtail/promtail.yaml:/etc/promtail/promtail.yaml
+        command: -config.file=/etc/promtail/promtail.yaml
+        depends_on:
+            - loki
+        restart: unless-stopped
+
+    loki:
+        image: grafana/loki:2.9.0
+        volumes:
+            - ./monitoring/loki/loki-config.yaml:/etc/loki/loki-config.yaml:ro
+            - loki-data:/loki
+        command: -config.file=/etc/loki/loki-config.yaml
+        restart: unless-stopped
+
+    cadvisor:
+        image: gcr.io/cadvisor/cadvisor:latest
+        container_name: cadvisor
+        volumes:
+            - /:/rootfs:ro
+            - /var/run:/var/run:ro
+            - /sys:/sys:ro
+            - /var/lib/docker/:/var/lib/docker:ro
+            - /dev/disk/:/dev/disk:ro
+        privileged: true
+        restart: unless-stopped
+
 volumes:
     mongo-data:
     weaviate-data:
     postgres-data:
     keycloak-data:
+    prometheus-data:
+    grafana-data:
+    loki-data:
