[alloy] fix relabeling issue

--- a/helm/alloy/alloy-settings.config
+++ b/helm/alloy/alloy-settings.config
@@ -5,7 +5,9 @@ logging {
 
 discovery.kubernetes "pods_ns" {
     role       = "pod"
-    namespaces = ["team-breaking-build"]
+    namespaces {
+      names = ["recipefy"]
+    }
 }
 
 discovery.relabel "pods_ns" {
@@ -15,6 +17,20 @@ discovery.relabel "pods_ns" {
       action = "replace"
       target_label = "log_type"
       replacement = "pod"
+    }
+
+    rule {
+      source_labels = ["__meta_kubernetes_namespace", "__meta_kubernetes_pod_name"]
+      target_label = "job"
+      separator = "/"
+    }
+
+    rule {
+      source_labels = ["__meta_kubernetes_namespace", "__meta_kubernetes_pod_name", "__meta_kubernetes_pod_container_name"]
+      target_label = "__path__"
+      separator = ";"
+      regex = "(.*);(.*);(.*)"
+      replacement = "/var/log/pods/${1}_${2}_*/${3}/*log"
     }
 
     rule {
@@ -55,16 +71,11 @@ local.file_match "pods_ns" {
 
 loki.source.file "pods_ns" {
     targets = local.file_match.pods_ns.targets
-    forward_to = [loki.process.pods_ns.receiver]
-}
-
-loki.process "pods_ns" {
     forward_to = [loki.write.local.receiver]
-    stage.cri { }
 }
 
 loki.write "local" {
     endpoint {
-        url = "http://loki.team-breaking-build.svc.cluster.local:3100/loki/api/v1/push"
+      url = "http://loki.recipefy-monitoring.svc.cluster.local:3100/loki/api/v1/push"
     }
 }
