--- a/helm/alloy/values.yaml
+++ b/helm/alloy/values.yaml
@@ -61,6 +61,20 @@ alloy:
           target_label = "log_type"
           replacement = "pod"
         }
+      
+        rule {
+          source_labels = ["__meta_kubernetes_namespace", "__meta_kubernetes_pod_name"]
+          target_label = "job"
+          separator = "/"
+        }
+
+        rule {
+          source_labels = ["__meta_kubernetes_namespace", "__meta_kubernetes_pod_name", "__meta_kubernetes_pod_container_name"]
+          target_label = "__path__"
+          separator = ";"
+          regex = "(.*);(.*);(.*)"
+          replacement = "/var/log/pods/${1}_${2}_*/${3}/*log"
+        }
           
         rule {
           source_labels = ["__meta_kubernetes_pod_container_name"]
@@ -100,12 +114,7 @@ alloy:
         
       loki.source.file "pods_ns" {
         targets = local.file_match.pods_ns.targets
-        forward_to = [loki.process.pods_ns.receiver]
-      }
-        
-      loki.process "pods_ns" {
         forward_to = [loki.write.local.receiver]
-        stage.cri { }
       }
 
       loki.write "local" {
