--- a/.github/workflows/version-ci-cd.yml
+++ b/.github/workflows/version-ci-cd.yml
@@ -3,6 +3,7 @@ name: CI/CD Pipeline for Version Microservice
 on:
   push:
     paths:
+      - ".github/workflows/version-ci-cd.yml"
       - 'server/version/**'
       - 'helm/version/**'
   workflow_dispatch:
@@ -123,9 +124,29 @@ jobs:
             echo "IMAGE_TAG=sha-$(echo $GITHUB_SHA | cut -c1-7)" >> $GITHUB_ENV
           fi
 
+      - name: Record deployment timestamp
+        run: echo "DEPLOYMENT_TIMESTAMP=$(($(date +%s) * 1000))" >> $GITHUB_ENV
+
       - name: Deploy Helm Chart
         run: |
           helm upgrade --install ${{ env.HELM_RELEASE_NAME }} ${{ env.CHART_PATH }} \
             --namespace ${{ env.HELM_NAMESPACE }} \
             --set image.tag=${{ env.IMAGE_TAG }} \
             --wait --timeout 5m
+
+
+      - name: Annotate Grafana with deployment
+        env:
+          GRAFANA_URL: https://grafana.team-breaking-build.student.k8s.aet.cit.tum.de
+          GRAFANA_DASHBOARD_UID: version-service
+          GRAFANA_SERVICE_TOKEN: ${{ secrets.GRAFANA_SERVICE_TOKEN }}
+        run: |
+          curl -X POST "$GRAFANA_URL/api/annotations" \
+            -H "Authorization: Bearer $GRAFANA_SERVICE_TOKEN" \
+            -H "Content-Type: application/json" \
+            -d "{
+              \"dashboardUID\": \"$GRAFANA_DASHBOARD_UID\",
+              \"time\": $DEPLOYMENT_TIMESTAMP,
+              \"tags\": [\"deployment\"],
+              \"text\": \"🚀 Deployed version-service"
+            }"
