[grafana] add timestamp to annotation

--- a/.github/workflows/recipe-ci-cd.yml
+++ b/.github/workflows/recipe-ci-cd.yml
@@ -139,6 +139,7 @@ jobs:
           GRAFANA_URL: https://grafana.team-breaking-build.student.k8s.aet.cit.tum.de
           GRAFANA_DASHBOARD_UID: recipe-service
           GRAFANA_SERVICE_TOKEN: ${{ secrets.GRAFANA_SERVICE_TOKEN }}
+          DEPLOYMENT_TIMESTAMP: ${{ env.DEPLOYMENT_TIMESTAMP }}
         run: |
           curl -X POST "$GRAFANA_URL/api/annotations" \
             -H "Authorization: Bearer $GRAFANA_SERVICE_TOKEN" \
@@ -147,5 +148,5 @@ jobs:
               \"dashboardUID\": \"$GRAFANA_DASHBOARD_UID\",
               \"time\": $DEPLOYMENT_TIMESTAMP,
               \"tags\": [\"deployment\"],
-              \"text\": \"🚀 Deployed recipe-service"
+              \"text\": \"🚀 Deployed recipe-service\"
             }"
