--- a/.github/workflows/genai-ci-cd.yml
+++ b/.github/workflows/genai-ci-cd.yml
@@ -159,6 +159,7 @@ jobs:
           GRAFANA_URL: https://grafana.team-breaking-build.student.k8s.aet.cit.tum.de
           GRAFANA_DASHBOARD_UID: genai-service
           GRAFANA_SERVICE_TOKEN: ${{ secrets.GRAFANA_SERVICE_TOKEN }}
+          DEPLOYMENT_TIMESTAMP: ${{ env.DEPLOYMENT_TIMESTAMP }}
         run: |
           curl -X POST "$GRAFANA_URL/api/annotations" \
             -H "Authorization: Bearer $GRAFANA_SERVICE_TOKEN" \
@@ -167,5 +168,5 @@ jobs:
               \"dashboardUID\": \"$GRAFANA_DASHBOARD_UID\",
               \"time\": $DEPLOYMENT_TIMESTAMP,
               \"tags\": [\"deployment\"],
-              \"text\": \"🚀 Deployed genai-service"
+              \"text\": \"🚀 Deployed genai-service\"
             }"
