--- a/.github/workflows/version-ci-cd.yml
+++ b/.github/workflows/version-ci-cd.yml
@@ -140,6 +140,7 @@ jobs:
           GRAFANA_URL: https://grafana.team-breaking-build.student.k8s.aet.cit.tum.de
           GRAFANA_DASHBOARD_UID: version-service
           GRAFANA_SERVICE_TOKEN: ${{ secrets.GRAFANA_SERVICE_TOKEN }}
+          DEPLOYMENT_TIMESTAMP: ${{ env.DEPLOYMENT_TIMESTAMP }}
         run: |
           curl -X POST "$GRAFANA_URL/api/annotations" \
             -H "Authorization: Bearer $GRAFANA_SERVICE_TOKEN" \
@@ -148,5 +149,5 @@ jobs:
               \"dashboardUID\": \"$GRAFANA_DASHBOARD_UID\",
               \"time\": $DEPLOYMENT_TIMESTAMP,
               \"tags\": [\"deployment\"],
-              \"text\": \"🚀 Deployed version-service"
+              \"text\": \"🚀 Deployed version-service\"
             }"
