[genai] update configmap

--- a/helm/genai/templates/configmap.yaml
+++ b/helm/genai/templates/configmap.yaml
@@ -6,7 +6,7 @@ data:
   LLM_MODEL: "gemma3:27b"
   LLM_TEMPERATURE: "0.7"
   LLM_BASE_URL: "https://gpu.aet.cit.tum.de/api/"
-  WEAVIATE_HOST: "http://weaviate.recipefy-database.svc.cluster.local"
+  WEAVIATE_HOST: "weaviate.recipefy-database.svc.cluster.local"
   WEAVIATE_PORT: "8080"
   DEBUG: "false"
   LOG_LEVEL: "INFO"
