[grafana] add dashboards (#145)
* [grafana] add dashboards

* [grafana] remove default

--- a/helm/grafana/values.yaml
+++ b/helm/grafana/values.yaml
@@ -34,6 +34,10 @@ certificate:
     - digital signature
     - key encipherment
 
+# Dashboard provisioning configuration
+dashboards:
+  enabled: true
+
 resources:
   requests:
     memory: 256Mi
