--- a/.github/workflows/genai-ci-cd.yml
+++ b/.github/workflows/genai-ci-cd.yml
@@ -39,7 +39,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest pytest-asyncio httpx
 
       - name: Run Python tests
         run: |
@@ -61,6 +60,9 @@ jobs:
           assert response.status_code == 200
           print('Health check test passed')
           "
+          
+          # Run pytest tests
+          pytest test/ -v --tb=short
 
   build:
     name: Build and Push Docker Images
