--- a/genai/requirements.txt
+++ b/genai/requirements.txt
@@ -12,5 +12,8 @@ langchain-huggingface
 sentence-transformers
 pytest==7.4.3
 pytest-asyncio==0.23.2
+pytest-cov==4.1.0
+pytest-xdist==3.3.1
+pytest-mock==3.12.0
 httpx==0.27.0
 prometheus-fastapi-instrumentator
