chore: fixes env

--- a/.env.example
+++ b/.env.example
@@ -3,13 +3,13 @@
 ######################################
 KEYCLOAK_CREDENTIALS_ADMIN_CLIENT_ID=admin-cli
 KEYCLOAK_CREDENTIALS_ADMIN_CLIENT_SECRET=changeme-super-secret-admin-cli-uuid
-KEYCLOAK_CREDENTIALS_RECIPEFY_CLIENT_ID=recipefy-web
+KEYCLOAK_CREDENTIALS_RECIPEFY_CLIENT_ID=web
 KEYCLOAK_CREDENTIALS_RECIPEFY_CLIENT_SECRET=changeme-super-secret-recipefy-web-uuid
 
 ######################################
 # GATEWAY (SEPARATE API CLIENT) SECRETS
 ######################################
-CLIENT_ID=recipefy-web
+CLIENT_ID=web
 CLIENT_SECRET=changeme-gateway-client-secret
 
 ######################################
@@ -26,8 +26,8 @@ SPRING_PROFILES_ACTIVE=dev
 
 # Mongo side
 VERSION_MONGO_DB_NAME=recipefy
-VERSION_MONGO_USER=root_admin
-VERSION_MONGO_PASSWORD=root_password
+VERSION_MONGO_USER=admin
+VERSION_MONGO_PASSWORD=password
 
 # Postgres side
 VERSION_POSTGRES_DB_NAME=recipefy
@@ -45,11 +45,11 @@ POSTGRES_PASSWORD=db_password
 # SHARED / STAND-ALONE MONGODB
 ######################################
 MONGO_DB=recipefy
-MONGO_USER=root_admin
-MONGO_PASSWORD=root_password
+MONGO_USER=admin
+MONGO_PASSWORD=password
 MONGO_INITDB_DATABASE=recipefy
-MONGO_INITDB_ROOT_USERNAME=root_admin
-MONGO_INITDB_ROOT_PASSWORD=root_password
+MONGO_INITDB_ROOT_USERNAME=admin
+MONGO_INITDB_ROOT_PASSWORD=password
 
 ######################################
 # KEYCLOAK BOOTSTRAP ADMIN (container start-up)
